Limit underflow protection CMoveINode in PhaseIdealLoop::do_unroll must also protect type from underflow

XMLWordPrintable

    • b07
    • x86_64
    • generic

      The following test failed in the JDK20 CI:

      sun/nio/cs/FindOneCharEncoderBugs.java

      Here's a snippet from the log file:

      ----------stdout:(21/1323)*----------
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=\\loopnode.cpp:2169
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (c:\\sb\\prod\\1673325984\\workspace\\open\\src\\hotspot\\share\\opto\\loopnode.cpp:2169), pid=9040, tid=17328
      # assert(inner->is_valid_counted_loop(T_INT) && inner->is_strip_mined()) failed: OuterStripMinedLoop should have been removed
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0+31) (fastdebug build 20-ea+31-2305)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+31-2305, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
      # Core dump will be written. Default location: C:\\sb\\prod\\1673430100\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_nio\\scratch\\4\\hs_err_pid9040.mdmp
      #
      # An error report file with more information is saved as:
      # C:\\sb\\prod\\1673430100\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_nio\\scratch\\4\\hs_err_pid9040.log
      #
      # Compiler replay data is saved as:
      # C:\\sb\\prod\\1673430100\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_nio\\scratch\\4\\replay_pid9040.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      result: Error. Agent communication error: java.net.SocketException: Connection reset; check console log for any additional details

      Here's the crashing thread's stack:

      --------------- T H R E A D ---------------

      Current thread (0x000002382dd5b8c0): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=17328, stack(0x0000006f5e400000,0x0000006f5e500000)]


      Current CompileTask:
      C2: 224992 5613 ! 4 sun.nio.cs.ext.EUC_JP$Encoder::encodeBufferLoop (289 bytes)

      Stack: [0x0000006f5e400000,0x0000006f5e500000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xbfdb51] os::win32::platform_print_native_stack+0xf1 (os_windows_x86.cpp:236)
      V [jvm.dll+0xe7f780] VMError::report+0x10c0 (vmError.cpp:813)
      V [jvm.dll+0xe813be] VMError::report_and_die+0x6ce (vmError.cpp:1593)
      V [jvm.dll+0xe81b04] VMError::report_and_die+0x64 (vmError.cpp:1352)
      V [jvm.dll+0x5717b7] report_vm_error+0xb7 (debug.cpp:286)
      V [jvm.dll+0xaa8daa] LoopNode::verify_strip_mined+0x14a (loopnode.cpp:2169)
      V [jvm.dll+0xa70a55] PathFrequency::to+0xef5 (loopPredicate.cpp:1077)
      V [jvm.dll+0xa6cacb] PhaseIdealLoop::loop_predication_impl+0x74b (loopPredicate.cpp:1575)
      V [jvm.dll+0xa6be48] IdealLoopTree::loop_predication+0x58 (loopPredicate.cpp:1621)
      V [jvm.dll+0xa8df39] PhaseIdealLoop::build_and_optimize+0x1089 (loopnode.cpp:4539)
      V [jvm.dll+0x5074bd] Compile::Optimize+0x108d (compile.cpp:2382)
      V [jvm.dll+0x5043aa] Compile::Compile+0x163a (compile.cpp:831)
      V [jvm.dll+0x427855] C2Compiler::compile_method+0x145 (c2compiler.cpp:116)
      V [jvm.dll+0x51e528] CompileBroker::invoke_compiler_on_method+0x858 (compileBroker.cpp:2240)
      V [jvm.dll+0x51bced] CompileBroker::compiler_thread_loop+0x23d (compileBroker.cpp:1917)
      V [jvm.dll+0x7eb2c2] JavaThread::thread_main_inner+0x282 (javaThread.cpp:710)
      V [jvm.dll+0xdfa703] Thread::call_run+0x253 (thread.cpp:229)
      V [jvm.dll+0xbfc468] thread_native_entry+0xb8 (os_windows.cpp:547)
      C [ucrtbase.dll+0x2268a]
      C [KERNEL32.DLL+0x17974]
      C [ntdll.dll+0x5a0b1]

        1. H.java
          0.5 kB
        2. r.log
          295 kB
        3. Test.java
          3 kB

            Assignee:
            Emanuel Peter
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: