8299975: Limit underflow protection CMoveINode in PhaseIdealLoop::do_unroll must also protect type from underflow